My own calendar created

--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "moment",
+              "moment/locale/*"
+            ],
             "outputPath": "dist/calendario-vacaciones",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -45,8 +49,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
